# pzmods

./: .gitignore  README.md  build-gui-exe.cmd  pyproject.toml  pzmods-gui.cmd  pzmods-gui.spec  pzmods.cmd  pzmods_gui_main.py
pz_mod_sync/: __init__.py  cli.py  collection.py  config.py  generate.py  gui.py  install.py  logging_utils.py  manifest.py  manifest_utils.py  models.py  paths.py  steamcmd.py  sync.py
sample-manifest/: server.json
tests/: test_collection.py  test_generate_manifest.py  test_manifest.py  test_manifest_utils.py  test_paths_install_and_validate.py  test_steamcmd.py
